# dex

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  project_structure.sh  setup.sh  supervisord.conf
api/: go.mod  main.go
api/cmd/: main.go
api/internal/app/: app.go
api/src/config/: config.go
backend/api/: go.mod
backend/orderbook/: Cargo.toml
backend/orderbook/src/: lib.rs  main.rs
backend/orderbook/src/engine/: matching_engine.rs  mod.rs  orderbook.rs
backend/orderbook/src/market_maker/: amm.rs  liquidity_pool.rs  mod.rs  price_impact.rs  slippage.rs  types.rs
backend/orderbook/src/models/: account.rs  mod.rs  order.rs  trade.rs
backend/orderbook/src/utils/: error.rs
contracts/solana/: Anchor.toml
core/: Cargo.toml
core/src/: main.rs
docs/architecture/: ARCHITECTURE.md  README.md
monitoring/prometheus/: prometheus.yml
programs/: Cargo.toml
programs/dex/src/: lib.rs
scripts/: healthcheck.sh  init-project.sh  init.sh
