[workspace]
resolver = "2"

[package]
name = "dex-orderbook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket = "0.5.0-rc.3"
redis = { version = "0.23.0", features = ["tokio-comp"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
async-trait = "0.1"
rust_decimal = { version = "1.30", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["serde", "v4"] }
dashmap = "5.5"
priority-queue = "1.3"
tokio-stream = "0.1"
futures = "0.3"
parking_lot = "0.12"
rust_decimal_macros = "1.30"

[dev-dependencies]
mockall = "0.11"
tokio-test = "0.4"
pretty_assertions = "1.3" 